# project-catalyst

./: .markdownlintignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  Trunk.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  release.yaml
src/: asset_tracking.rs  audio.rs  lib.rs  main.rs
src/demo/: animation.rs  level.rs
src/screens/: credits.rs
src/theme/: interaction.rs  widgets.rs
web/: index.html  restart-audio-context.js  style.css
